[package]
name = "wifi-prometheus-exporter"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
ssh2 = "0.9.4"
dotenvy = "0.15.7"
main_error = "0.1.2"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.7"
ctrlc = "3.4.4"
thiserror = "1.0.61"
rumqttc = "0.24.0"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
secretfile = { version = "0.1.0" }
clap = { version = "4.5.7", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
